# RustPrint

./: LICENSE  README.md  pyproject.toml
codewikibench/eval_sketch/: README.md
codewikibench/eval_sketch/src/: config.py  run_evaluation_pipeline.sh  run_rubrics_pipeline.sh  utils.py
codewikibench/eval_sketch/src/docs_parser/: parse_generated_docs.py  parse_official_docs.py
codewikibench/eval_sketch/src/judge/: combine_evaluations.py  judge.py  visualize_evaluation.py
codewikibench/eval_sketch/src/rubrics_generator/: combine_rubrics.py  generate_rubrics.py
codewikibench/eval_sketch/src/tools/: docs_navigator.py
rustprint/: __init__.py  __main__.py
rustprint/cli/: __init__.py  config_manager.py  git_manager.py  help.py  main.py
rustprint/cli/adapters/: doc_generator.py
rustprint/cli/commands/: config.py  init.py  migrate.py  web.py
rustprint/cli/models/: config.py
rustprint/cli/pipeline/: __init__.py  _common.py  eval_sketch.py  execute.py  extract_best_solution.py  gen_sketch.py  gen_sketch_docs.py  refine_execution.py  refine_sketch.py  test_trans.py
rustprint/cli/utils/: api_errors.py  errors.py  fs.py  live.py  repo_validator.py  validation.py
rustprint/src/: __init__.py  agent_retry.py  config.py  llm_services.py  prompt_template.py  utils.py
rustprint/src/agent_tools/: cargo_check.py  cargo_single_test.py  cargo_test_no_run.py  deps.py  find_code_component.py  read_code_components.py  read_dependencies.py  read_documentation.py  str_replace_editor.py  unsafe_detect.py
rustprint/src/dependency_analyzer/: __init__.py  ast_parser.py  dependency_graphs_builder.py  topo_sort.py
rustprint/src/dependency_analyzer/analysis/: analysis_service.py  call_graph_analyzer.py  repo_analyzer.py
rustprint/src/dependency_analyzer/analyzers/: c.py  rust.py
rustprint/src/dependency_analyzer/models/: analysis.py
rustprint/src/dependency_analyzer/utils/: logging_config.py
rustprint/src/documentation/c/: __init__.py  agent_orchestrator.py  cluster_modules.py  documentation_generator.py  generate_sub_module_documentations.py  module_tree_utils.py
rustprint/src/documentation/rust/: __init__.py  refinement.py  sketch_doc_generator.py
rustprint/src/translation/code/: __init__.py  c2rust_generator.py  c2rust_orchestrator.py
rustprint/src/translation/execution_revisor/: execution_refine.py  temp_to_execution.py
rustprint/src/translation/test/: __init__.py  preprocess.py  test_trans_generator.py  test_trans_orchestrator.py
rustprint/web/: __init__.py  runner.py  server.py
rustprint/web/static/: app.js  index.html  style.css
